--- a/src/App.css
+++ b/src/App.css
@@ -46,8 +46,11 @@ html {
   height: 100px;
   width: 100px;
   background-color: #777777;
+  border-radius: 10px;
+  opacity: .9;
   color: #61dafb;
   margin: auto;
-  padding: 10px;
+  padding: 20px;
+  padding-right: 30px;
 }
 
