--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 html {
-  background-image: url(./pexels-photo-241544.jpeg);
+  background-image: url(./img/pexels-photo-241544.jpeg);
 }
 
 .App {
@@ -14,21 +14,8 @@ html {
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
 
 .stockQuote{
   height: 100px;
@@ -42,8 +29,7 @@ html {
 
 .NewsFeed{
   float: left;
-  width: 20%;
-  height: auto;
+  height: max-content;
 }
 
 .NewsItem{
@@ -54,5 +40,10 @@ html {
 
 .search{
   margin-top: 300px;
+}
 
+header {
+  text-align: right;
+  color: burlywood;
+  font-style: italic;
 }
