--- a/src/App.css
+++ b/src/App.css
@@ -7,19 +7,14 @@ html {
   height: auto;
 }
 
-.App-header {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.wrapper{
+  display:grid;
+  grid-template-columns: 1fr 2fr 1fr;
 }
-
-
 .stockQuote{
   height: 100px;
-  width: 100px;
+  padding-left: 10px;
+  width: 125px;
   background-color: #777777;
   border-radius: 10px;
   opacity: .9;
@@ -30,20 +25,31 @@ html {
 .NewsFeed{
   float: left;
   height: max-content;
+  color: #ffffff;
 }
 
 .NewsItem{
-  margin: 20px;
-  padding: 20px;
+  margin: 10px;
+  padding: 10px;
   background-color: #61dafb;
 }
 
+.news-section{
+  min-width: 20%;
+}
+
+.main-section{
+
+}
+
 .search{
-  margin-top: 300px;
+  margin-top: 200px;
+  position: relative;
 }
 
 header {
   text-align: right;
-  color: burlywood;
+  color: palegreen;
   font-style: italic;
+  font-size: 24px;
 }
