--- a/src/App.css
+++ b/src/App.css
@@ -44,7 +44,7 @@ html {
 }
 
 .search{
-  margin-top: 200px;
+  margin-top: 100px;
   position: relative;
 }
 
@@ -54,4 +54,8 @@ header {
   font-style: italic;
   font-size: 24px;
   margin-right: 20px;
+}
+
+svg {
+  background-color:white;
 }
